opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/unboxed_datatypes"
bug-reports: "https://github.com/janestreet/unboxed_datatypes/issues"
dev-repo: "git+https://github.com/janestreet/unboxed_datatypes.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/unboxed_datatypes/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.2.0"}
  "base"
  "ppx_jane"
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OxCaml Unboxed Datatypes"
description: "
 Unboxed versions of common sum types.
"
