(library
 (name astring)
 (public_name astring)
 (modules astring astring_unsafe astring_base astring_escape astring_char astring_sub astring_string)
 (wrapped false))

(library
 (name astring_top)
 (public_name astring.top)
 (libraries compiler-libs.toplevel astring)
 (modules astring_top)
 (wrapped false))

(install
 (package astring)
 (section lib)
 (files astring_top_init.ml))
