(documentation
 (package odoc)
 (mld_files
  dune
  features
  index
  interface
  ocamldoc_differences
  odoc_for_authors
  cheatsheet
  json))

(install
 (section doc)
 (files
  odoc-config.sexp
  (odoc_logo_placeholder.jpg as odoc-pages/odoc_logo_placeholder.jpg))
 (package odoc))

(install
 (section doc)
 (files
  (odoc-parser-config.sexp as odoc-config.sexp))
 (package odoc-parser))
