(library
 (name rresult)
 (public_name rresult)
 (modules rresult)
 (wrapped false))

(library
 (name rresult_top)
 (public_name rresult.top)
 (libraries compiler-libs.toplevel rresult)
 (modules rresult_top)
 (wrapped false))

(install
 (package rresult)
 (section lib)
 (files rresult_top_init.ml))
