; We use two different implementations of vectors depending on the availability of Dynarray in the standard library (starting OCaml 5.2).
; This reduces dependencies fo users of the newer OCaml versions, and reduces clashes with the ecosystem (https://github.com/craigfe/progress/pull/50).

; Rules for OCaml 5.2 and later

(rule
 (action
  (copy# pvector.dynarray.ml pvector.ml)))

(library
 (name pvector)
 (public_name progress.vector)
 (modules pvector))

; Main library

(library
 (name progress_engine)
 (public_name progress.engine)
 (modules :standard \ pvector)
 (libraries
  (re_export mtime)
  (re_export optint)
  fmt
  logs
  logs.fmt
  terminal_ansi
  progress.vector))
